src/styles/components/Loader.module.css
.loader {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--loader-background);
  z-index: 20;
}

.loader > svg.icon {
  width: 102px;
  height: 98px;
  fill: none;
  overflow: visible;
  stroke: var(--loader-color);
  stroke-width: 4;
  stroke-linejoin: round;
  stroke-linecap: round;
  transition: all 500ms ease;
  cursor: progress;
}

.loader > svg.icon:hover {
  filter: drop-shadow(0px 0px 1px var(--loader-neon-1))
          drop-shadow(0px 0px 2px var(--loader-neon-2))
          drop-shadow(0px 0px 3px var(--loader-neon-3))
          drop-shadow(0px 0px 4px var(--loader-neon-4))
          drop-shadow(0px 0px 5px var(--loader-neon-5)) brightness(1.5);
}

svg.icon > .initial {
  transform-origin: center center;
  stroke: transparent;
  fill: var(--loader-color);
}

